Update website with publications, teaching, and talks until April 2024

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,9 +5,15 @@ hsu:
 adamopoulos:
   name: Christos Adamopoulos
 
+adivarahan:
+  name: Jayashree Adivarahan
+
 amarasinghe:
   name: Saman Amarasinghe
   site: http://people.csail.mit.edu/saman/
+
+balasingam:
+  name: Akhilesh Balasingam
 
 bansal:
   name: Manya Bansal
@@ -20,6 +26,12 @@ bhargava:
 buchbinder:
   name: Sidney Buchbinder
   site: https://www.linkedin.com/in/sidney-buchbinder-39682241/
+
+carsello:
+  name: Alex Carsello
+
+chen:
+  name: Po-Han Chen
 
 chou:
   name: Stephen Chou
@@ -47,6 +59,9 @@ horowitz:
   name: Mark Horowitz
   site: http://www-vlsi.stanford.edu/~horowitz/
 
+ke:
+  name: Jake Ke
+
 kjolstad:
   name: Fredrik Kjolstad
   site: http://fredrikbk.com
@@ -54,6 +69,12 @@ kjolstad:
 kohli:
   name: Sumer Kohli
   site: https://skohli.dev/
+
+kong:
+  name: Taeyoung Kong
+
+koul:
+  name: Kalhan Koul
 
 lacouture:
   name: Rubens Lacouture
@@ -68,13 +89,26 @@ liu:
 madhvapathy:
   name: Sarika Madhvapathy
 
+mei:
+  name: Yuchen Mei
+
+melchert:
+  name: Jackson Melchert
+  
 nardi:
   name: Luigi Nardi
   site: https://cs.lth.se/luigi-nardi/
 
+nyengele:
+  name: Gedeon Nyengele
+
 olukotun:
   name: Kunle Olukotun
   site: http://arsenalfc.stanford.edu/kunle/
+
+raina:
+  name: Priyanka Raina
+  site: https://priyanka-raina.github.io/
 
 ramachandran:
   name: Neelesh Ramachandran
@@ -107,6 +141,10 @@ strange:
 souza:
   name: Artur Souza
 
+torng:
+  name: Christopher Torng
+  site: https://ctorng.com
+
 tudor: 
   name: Ana Tudor
   site: https://www.linkedin.com/in/ana-tudor/
@@ -122,6 +160,9 @@ won:
   name: Jaeyeon Won
   site: https://www.linkedin.com/in/jaeyeon-won-9385a811a/
   
+xie:
+  name: Zhouhua Xie
+
 xu:
   name: Haoran Xu
 
@@ -133,6 +174,13 @@ zarkos:
   name: Panagiotis Zarkos
   site: https://www.linkedin.com/in/panagiotis-zarkos-0a51a7ba/
 
+zhanggenghan:
+  name: Genghan Zhang
+  site: https://zhang677.github.io/
+
+zhangkeyi:
+  name: Keyi Zhang
+  site: https://keyizhang.com/
 zhao:
   name: Tian Zhao
   site: https://scholar.google.com/citations?hl=en&user=B8pqstQAAAAJ&view_op=list_works
