--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -1,9 +1,9 @@
-cs143sp23:
+cs143sp2324:
   title: "CS 143: Compilers"
   url: "https://cs143.stanford.edu"
   role: "Course Assistant (CA)"
   month: "Spring"
-  year: "2023"
+  year: "2023-2024"
   venue: "Stanford University"
 
 cs149fa21:
