Add in updates for job talk, adaptive LLM, Onyx MICRO, and IEEE submitted articles

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,6 +2,7 @@ hsu:
   name: Olivia Hsu
   site: https://cs.stanford.edu/~owhsu
 
+#A
 adamopoulos:
   name: Christos Adamopoulos
 
@@ -12,6 +13,7 @@ amarasinghe:
   name: Saman Amarasinghe
   site: http://people.csail.mit.edu/saman/
 
+#B
 balasingam:
   name: Akhilesh Balasingam
 
@@ -27,16 +29,26 @@ buchbinder:
   name: Sidney Buchbinder
   site: https://www.linkedin.com/in/sidney-buchbinder-39682241/
 
+#C
 carsello:
   name: Alex Carsello
 
 chen:
   name: Po-Han Chen
 
+chengbowun:
+  name: Bo Wun Cheng
+
 chou:
   name: Stephen Chou
   site: http://people.csail.mit.edu/s3chou
 
+#D
+desai:
+  name: Varun Desai
+  site: https://www.linkedin.com/in/vdesais/
+
+#E
 emer:
   name: Joel Emer
   site: https://people.csail.mit.edu/emer/
@@ -44,7 +56,9 @@ emer:
 ejjeh:
   name: Adel Ejjeh
   site: https://www.linkedin.com/in/adel-ejjeh
-
+#F
+#G
+#H
 hanrahan:
   name: Pat Hanrahan
 
@@ -58,7 +72,9 @@ hellsten:
 horowitz:
   name: Mark Horowitz
   site: http://www-vlsi.stanford.edu/~horowitz/
-
+#I
+#J
+#K
 ke:
   name: Jake Ke
 
@@ -76,6 +92,7 @@ kong:
 koul:
   name: Kalhan Koul
 
+#L
 lacouture:
   name: Rubens Lacouture
   site: https://www.linkedin.com/in/lrubens/
@@ -83,9 +100,14 @@ lacouture:
 lenfers:
   name: Johannes Lenfers
 
+liangweixin:
+  name: Weixin Liang
+  site: https://ai.stanford.edu/~wxliang/
+
 liu:
   name: Qiaoyi Liu
 
+#M
 madhvapathy:
   name: Sarika Madhvapathy
 
@@ -94,7 +116,8 @@ mei:
 
 melchert:
   name: Jackson Melchert
-  
+
+#N  
 nardi:
   name: Luigi Nardi
   site: https://cs.lth.se/luigi-nardi/
@@ -102,10 +125,14 @@ nardi:
 nyengele:
   name: Gedeon Nyengele
 
+#O
 olukotun:
   name: Kunle Olukotun
   site: http://arsenalfc.stanford.edu/kunle/
 
+#P
+#Q
+#R
 raina:
   name: Priyanka Raina
   site: https://priyanka-raina.github.io/
@@ -118,10 +145,14 @@ ranade:
   name: Gireeja Ranade
   site: http://people.eecs.berkeley.edu/~gireeja/
 
+ravipatigautham:
+  name: Sai Gautham Ravipati
+
 rucker: 
   name: Alexander Rucker
   site: https://www.linkedin.com/in/acrucker/
 
+#S
 sharma:
   name: Ritvik Sharma
   site: https://www.linkedin.com/in/ritvik-sharma-863090144/?originalSubdomain=in
@@ -145,6 +176,7 @@ torng:
   name: Christopher Torng
   site: https://ctorng.com
 
+#T
 tudor: 
   name: Ana Tudor
   site: https://www.linkedin.com/in/ana-tudor/
@@ -153,23 +185,29 @@ tumushabe:
   name: Gloria Tumushabe
   site: https://www.linkedin.com/in/gloria-tumushabe/
 
+#U
+#V
+#W
 whinnery: 
   name: Jake Whinnery
 
 won:
   name: Jaeyeon Won
   site: https://www.linkedin.com/in/jaeyeon-won-9385a811a/
-  
+ 
+#X 
 xie:
   name: Zhouhua Xie
 
 xu:
   name: Haoran Xu
 
+#Y
 yadav:
   name: Rohan Yadav
   site: https://rohany.github.io/
 
+#Z
 zarkos:
   name: Panagiotis Zarkos
   site: https://www.linkedin.com/in/panagiotis-zarkos-0a51a7ba/
@@ -181,6 +219,7 @@ zhanggenghan:
 zhangkeyi:
   name: Keyi Zhang
   site: https://keyizhang.com/
+
 zhao:
   name: Tian Zhao
   site: https://scholar.google.com/citations?hl=en&user=B8pqstQAAAAJ&view_op=list_works
