--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,8 +1,27 @@
-sparse2024:
+job2025:
+  title: "From Language to Silicon: Programming Systems for Sparse Accelerators"
+  month: "January to April"
+  venue: "University of California, Santa Barbara
+  <br>  University of Maryland, College Park
+  <br>  Carnegie Mellon University
+  <br>  University of Wisconsin-Madison
+  <br>  Massachusetts Institute of Technology
+  <br>  University of California, Berkeley
+  <br>  University of Washington
+  <br>  Cornell University and Cornell Tech
+  <br>  Princeton University
+  <br>  University of Michigan 
+  <br>  University of Texas at Austin
+  <br>  Columbia University"
+  year: 2025
+  movie: https://www.youtube.com/watch?v=HAEHUR7BTZU
+
+micro2024:
   title: "AHA Tutorial"
   month: November
-  venue: "to appear in MICRO 2024"
+  venue: "MICRO 2024"
   year: 2024
+  url: https://stanfordaha.github.io/aha_tutorial/
 
 sparse2024:
   title: "Mapping Sparse Applications to Accelerated Computing Systems"
