Add in updates for talks and JSSC 2025 paper

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,6 +8,7 @@ adamopoulos:
 
 adivarahan:
   name: Jayashree Adivarahan
+  site: https://www.linkedin.com/in/jayashree-adivarahan/
 
 amarasinghe:
   name: Saman Amarasinghe
@@ -38,6 +39,7 @@ chen:
 
 chengbowun:
   name: Bo Wun Cheng
+  site: https://www.linkedin.com/in/bo-wun-cheng/
 
 chou:
   name: Stephen Chou
@@ -71,7 +73,7 @@ hellsten:
 
 horowitz:
   name: Mark Horowitz
-  site: http://www-vlsi.stanford.edu/~horowitz/
+  site: https://vlsi.stanford.edu/people/mark-horowitz
 #I
 #J
 #K
@@ -116,6 +118,7 @@ mei:
 
 melchert:
   name: Jackson Melchert
+  site: https://www.linkedin.com/in/jack-melchert-a97475226/
 
 #N  
 nardi:
