--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,3 +1,9 @@
+portal2025:
+  title: "Portable Compilation of the Unified IR"
+  month: August
+  year: 2025
+  venue: "Portal Center Research Retreat"
+
 job2025:
   title: "From Language to Silicon: Programming Systems for Sparse Accelerators"
   month: "January to April"
