--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,68 @@
+asplos2026fuseflow: 
+  title: "FuseFlow: A Fusion-Centric Compilation Framework for Sparse Deep Learning on Streaming Dataflow"
+  abstract: "<p>
+    As deep learning models scale, sparse deep learning (DL) models that exploit
+    sparsity in weights, activations, or inputs and specialized dataflow hardware
+    have emerged as powerful solutions to address efficiency. We propose FuseFlow,
+    a compiler that converts sparse machine learning models written in PyTorch to
+    fused sparse dataflow graphs for reconfigurable dataflow architectures (RDAs).
+    FuseFlow is the first compiler to support general cross-expression fusion of 
+    sparse operations. In addition to fusion across kernels (expressions), FuseFlow
+    also supports optimizations like parallelization, dataflow ordering, and
+    sparsity blocking. It targets a cycle-accurate dataflow simulator for
+    microarchitectural analysis of fusion strategies. We use FuseFlow for
+    design-space exploration across four real-world machine learning applications
+    with sparsity, showing that full fusion (entire cross-expression fusion across
+    all computation in an end-to-end model) is not always optimal for sparse
+    models—fusion granularity depends on the model itself. FuseFlow also provides a
+    heuristic to identify and prune suboptimal configurations. Using FuseFlow, we
+    achieve performance improvements, including a ∼2.7x speedup over an unfused
+    baseline for GPT-3 with BigBird block-sparse attention.
+    </p>" 
+  venue: "to appear in International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS)"
+  year: 2026
+  authors:
+    - lacouture
+    - zhang-nathan
+    - sharma
+    - siracusa-marco
+    - kjolstad
+    - olukotun
+    - hsu
+
+asplos2026step: 
+  title: "Streaming Tensor Program: A streaming abstraction for dynamic parallelism"
+  abstract: "<p>
+    Dynamic behaviors are becoming prevalent in many tensor applications, like
+    machine learning, where many widely used models contain data-dependent tensor
+    shapes and control flow. However, the limited expressiveness of prior
+    programming abstractions for spatial dataflow accelerators (SDAs) forces these
+    dynamic behaviors to be implemented statically and/or unoptimized. To address
+    these challenges, we present Streaming Tensor Programs (STeP), a streaming
+    abstraction that enables dynamic tensor workloads to run efficiently on SDAs.
+    STeP introduces flexible routing operators, an explicit memory hierarchy, and
+    symbolic-shape semantics that expose dynamic data rates and tensor dimensions.
+    These capabilities unlock new optimizations, like dynamic tiling, dynamic
+    parallelization, and configuration time-multiplexing, that adapt SDA execution
+    to dynamic behaviors while preserving dataflow efficiency. Using a
+    cycle-approximate simulator on representative LLM layers and a full model with
+    real-world traces, STeP enables: dynamic tiling that breaks the Pareto-optimal
+    frontier from prior work, dynamic parallelization that improves latency by
+    ∼2.72x, and configuration time-multiplexing that increases compute utilization
+    by ∼2.64x over prior SDA abstractions and their implementations.
+  </p>"
+  venue: "to appear in International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS)"
+  year: 2026
+  authors:
+    - sohn-gina
+    - zhanggenghan
+    - hossfeld-kons
+    - kim-jungwoo
+    - sobotka-nathan
+    - zhang-nathan
+    - hsu
+    - olukotun
+
 cgo2026:
   title: "Ember: A Compiler for Embedding Operations on Decoupled Access-Execute Architectures"
   abstract: "<p>
@@ -132,42 +197,6 @@ icml2025:
     <br>  url={https://openreview.net/forum?id=gdsZ3uMPsY}
     <br>  }"
 
-icml2025esfomo:
-  title: "Adaptive Self-improvement LLM Agentic System for ML Library Development"
-  abstract: "<p>
-    ML libraries, often written in architecture-specific programming languages
-    (ASPLs) that target domain-specific architectures, are key to efficient ML
-    systems. However, writing these high-performance ML libraries is challenging
-    because it requires expert knowledge of both ML algorithms and the ASPL. Large
-    language models (LLMs), on the other hand, have shown general coding
-    capabilities. However, challenges remain when using LLMs for generating ML
-    libraries using ASPLs because 1) this task is complicated even for human
-    experts and 2) there are limited code examples due to the esoteric and evolving
-    nature of ASPLs. We present an adaptive self-improvement agentic system that
-    enables LLMs to perform such complex reasoning under limited data by
-    iteratively improving their capability through self-generated experience. In
-    order to evaluate the effectiveness of our system, we construct a benchmark of
-    a typical ML library and generate ASPL code with both open and closed-source
-    LLMs on this benchmark. Our results show improvements of up to over a baseline
-    single LLM.
-    </p>"
-  venue: International Conference on Machine Learning (ICML) Workshop on Efficient Systems for Foundation Models (ES-FoMo)
-  year: 2025
-  month: July
-  pdf: /publications/iclr-icml2025-adaptive-self-improvement.pdf 
-  authors: 
-    - zhanggenghan
-    - liangweixin
-    - hsu
-    - olukotun
-  bibtex: "@inproceedings{zhang2025adaptive,
-    <br>  title={Adaptive Self-improvement {LLM} Agentic System for {ML} Library Development},
-    <br>  author={Genghan Zhang and Weixin Liang and Olivia Hsu and Kunle Olukotun},
-    <br>  booktitle={Forty-second International Conference on Machine Learning},
-    <br>  year={2025},
-    <br>  url={https://openreview.net/forum?id=gdsZ3uMPsY}
-    <br>  }"
-
 ieeemicro2025: 
   title: "Designing Programmable Accelerators for Sparse Tensor Algebra"
   abstract: "<p>
@@ -217,65 +246,7 @@ ieeemicro2025:
           control},
     <br>  doi={10.1109/MM.2025.3556611}}"
   
-iclr2025llm:
-  title: "Adaptive Self-improvement LLM Agentic System for ML Library Development"
-  abstract: "<p>
-    ML libraries, often written in architecture-specific programming languages
-    (ASPLs) that target domain-specific architectures, are key to efficient ML
-    systems. However, writing these high-performance ML libraries is challenging
-    because it requires expert knowledge of both ML algorithms and the ASPL. Large
-    language models (LLMs), on the other hand, have shown general coding
-    capabilities. However, challenges remain when using LLMs for generating ML
-    libraries using ASPLs because 1) this task is complicated even for human
-    experts and 2) there are limited code examples due to the esoteric and evolving
-    nature of ASPLs. We present an adaptive self-improvement agentic system that
-    enables LLMs to perform such complex reasoning under limited data by
-    iteratively improving their capability through self-generated experience. In
-    order to evaluate the effectiveness of our system, we construct a benchmark of
-    a typical ML library and generate ASPL code with both open and closed-source
-    LLMs on this benchmark. Our results show improvements of up to over a baseline
-    single LLM.
-    </p>"
-  venue: "International Conference on Learning Representations (ICLR) Workshop on Reasoning and Planning for LLMs"
-  year: 2025
-  month: May
-  pdf: /publications/iclr-icml2025-adaptive-self-improvement.pdf 
-  authors: 
-    - zhanggenghan
-    - liangweixin
-    - hsu
-    - olukotun
   
-iclr2025dl4c:
-  title: "Adaptive Self-improvement LLM Agentic System for ML Library Development"
-  abstract: "<p>
-    ML libraries, often written in architecture-specific programming languages
-    (ASPLs) that target domain-specific architectures, are key to efficient ML
-    systems. However, writing these high-performance ML libraries is challenging
-    because it requires expert knowledge of both ML algorithms and the ASPL. Large
-    language models (LLMs), on the other hand, have shown general coding
-    capabilities. However, challenges remain when using LLMs for generating ML
-    libraries using ASPLs because 1) this task is complicated even for human
-    experts and 2) there are limited code examples due to the esoteric and evolving
-    nature of ASPLs. We present an adaptive self-improvement agentic system that
-    enables LLMs to perform such complex reasoning under limited data by
-    iteratively improving their capability through self-generated experience. In
-    order to evaluate the effectiveness of our system, we construct a benchmark of
-    a typical ML library and generate ASPL code with both open and closed-source
-    LLMs on this benchmark. Our results show improvements of up to over a baseline
-    single LLM.
-    </p>"
-  venue: "Deep Learning for Code (DL4C) Workshop at International Conference on Learning Representations (ICLR)"
-  year: 2025
-  month: May
-  pdf: /publications/iclr-icml2025-adaptive-self-improvement.pdf 
-  award: "Spotlight: Best Paper Award"
-  authors: 
-    - zhanggenghan
-    - liangweixin
-    - hsu
-    - olukotun
-
 cgo2025: 
   title: "Stardust: Compiling Sparse Tensor Algebra to a Reconfigurable Dataflow Architecture"
   abstract: "<p>
@@ -635,32 +606,6 @@ pldi2023:
     <br>    keywords = {sparse tensor algebra, compilation, external functions, automated search}
     }"
 
-plarch2023:
-  title: "Challenges with Hardware-Software Co-design for Sparse Machine Learning on Streaming Dataflow"
-  venue: "Workshop on Programming Languages and Architecture (PLARCH) co-located with FCRC/ISCA/PLDI 2023"
-  abstract: "<p>
-    This paper details the problem landscape that arises from using a general
-    tensor algebra accelerator framework to compute real-world end-to-end machine
-    learning applications. We identify three key challenges for correctness and
-    performance, which include support for tensor reshaping and nonlinear
-    operations, dataflow optimization (kernel fusion, optimal dataflow order), and
-    leveraging sparsity structure. This paper motivates the need to address these
-    problems in the domain-specific language, compiler framework, and architectural
-    design for sparse machine learning. We extended a general tensor algebra
-    compiler and architectural model, the Sparse Abstract Machine, to real-world
-    sparse machine learning models in order to identify the key challenges above. 
-    <p>"
-  year: 2023
-  month: June
-  pdf: /publications/plarch2023.pdf
-  authors:
-    - lacouture
-    - hsu
-    - olukotun
-    - kjolstad
-  movie: https://www.youtube.com/watch?v=eiYtlmeSGCY&ab_channel=ACMSIGPLAN
-  embeddedmovie: <iframe width="560" height="315" src="https://www.youtube.com/embed/eiYtlmeSGCY?si=YqMqNgUv3CoNKoM-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
 asplos2023: 
   title: The Sparse Abstract Machine
   abstract: "<p>
@@ -724,31 +669,6 @@ asplos2023:
     }"
   movie: https://www.youtube.com/watch?v=zCzZKWheizE
   embeddedmovie: <iframe width="560" height="315" src="https://www.youtube.com/embed/zCzZKWheizE?si=yE869mNtf5SHBWLa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-latte2023:
-  title: Designing a Dataflow Hardware Accelerator with an Abstract Machine 
-  venue: "Workshop on Languages, Tools, and Techniques for Accelerator Design (LATTE) co-located with ASPLOS 2023"
-  abstract: "<p>
-    This paper motivates the use of domain-specific abstract machines for designing hardware accelerators. Specifically, we
-    describe how we built a reconfigurable dataflow accelerator
-    for sparse tensor algebra, a relatively complex domain, using
-    the Sparse Abstract Machine (SAM). We show that leveraging an abstract dataflow representation (and its compiler)
-    lead to a slew of benefits, including computational generality within the application domain, easier verification and
-    debugging, boosted design productivity, and decoupled development of the toolchain from the hardware design and
-    generation. These benefits allowed us to build the accelerator
-    within a short time-frame with only two designers.
-    <p>"
-  year: 2023
-  pdf: /publications/latte2023-sparse-cgra.pdf
-  month: March
-  authors:
-    - hsu
-    - strange
-    - olukotun
-    - horowitz
-    - kjolstad
-  movie: https://youtu.be/0rBjQG8z7Dc
-  embeddedmovie: <iframe width="560" height="315" src="https://www.youtube.com/embed/0rBjQG8z7Dc?si=iqzXVC5Y5UEI21Iv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 sigcse2023:
   title: Inclusive study group formation at scale
